trying to fix landing page on mobile

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -4,7 +4,6 @@
 	background-repeat: no-repeat;
 	background-position: top center;
 	width: 100%;
-	min-height: 400px;
 	display: table;
 	.banner_content {
 		display: table-cell;
@@ -78,7 +77,6 @@
 	background-repeat: no-repeat;
 	background-position: top center;
 	width: 100%;
-	min-height: 400px;
 	text-align: center;
 	vertical-align: middle;
 	h2 {
@@ -246,7 +244,6 @@ button, .button:hover {
 	background-repeat: no-repeat;
 	background-position: top center;
 	width: 100%;
-	min-height: 400px;
 	text-align: center;
 	vertical-align: middle;
 	h2 {
